--- a/Mid-Assignment/views/login/index.ejs
+++ b/Mid-Assignment/views/login/index.ejs
@@ -86,21 +86,21 @@
 		  	</div>
 		</aside>
 
-		<div class="colorlib-wrap">
+		<div class="colorlib-wrap" style="background-color: antiquewhite;">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-9">
 						<div class="row">
 							<div class="col-md-12">
 								<div class="wrap-division">
-									<div class="col-md-12 col-md-offset-0 heading2 animate-box">
+									<div class="col-md-12 col-md-offset-0 heading2 animate-box" style="text-align: center;">
 										<h2>Please Login</h2>
 									</div>
 									<div class="row">
-										<div class="col-md-12 animate-box">
+										<div class="col-md-7 animate-box" style="text-align: center;">
 											<div class="room-wrap">
 												<div class="row">
-            									  <form role="form" name="hotels-enq" method="post" action="">
+            									  <form role="form" name="hotels-enq" method="post" action="" style="vertical-align: center;">
 									                <div class="form-group">
 									                  <label>Username</label>
 									                  <input type="text" class="form-control" id="enq-input" placeholder="Username" name="uname" value="" required title="Please Enter Your Username">
@@ -163,17 +163,7 @@
 	<!-- Main -->
 	<script src="assets/js/main.js"></script>
 
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5b82fb9aafc2c34e96e7eb01/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
+
 <!--End of Tawk.to Script-->
 
 	</body>
