--- a/Mid-Assignment/views/partials/header.ejs
+++ b/Mid-Assignment/views/partials/header.ejs
@@ -55,9 +55,9 @@ if($_SESSION['login_status']=="")
     <!-- Logo -->
     <a href="/" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>G</b>J</span>
+      <span class="logo-mini"><b>T</b>G</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>travel</b>Guide</span>
+      <span class="logo-lg"><b>Travel</b>Guide</span>
     </a>
 
     <!-- Header Navbar -->
