--- a/Mid-Assignment/views/login/index.ejs
+++ b/Mid-Assignment/views/login/index.ejs
@@ -96,7 +96,7 @@
 									<div class="col-md-12 col-md-offset-0 heading2 animate-box" style="text-align: center;">
 										<h2>Please Login</h2>
 									</div>
-									<div class="row">
+									<div class="row" style="color: black;">
 										<div class="col-md-7 animate-box" style="text-align: center;">
 											<div class="room-wrap">
 												<div class="row">
@@ -109,8 +109,8 @@
 									                  <label>Password</label>
 									                  <input type="password" class="form-control" id="enq-input" placeholder="Your Password" name="pwd" value="">
 									                </div>										
-                  									<button type="submit" class="btn btn-primary">Login</button>
-                  									<button type="button" onclick="location.href='/register'" class="btn btn-primary" value="register">Register</button>
+                  									<button type="submit" class="btn btn-primary" style="color:black; font-size: x-large;">Login</button>
+                  									<button type="button" onclick="location.href='/register'" class="btn btn-primary" value="register" style="color:black; font-size: x-large;">Register</button>
                   								   </form>
 												</div>
 											</div>
