--- a/Mid-Assignment/views/partials/footer.ejs
+++ b/Mid-Assignment/views/partials/footer.ejs
@@ -6,8 +6,8 @@
             <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
             <p>
                 <ul class="colorlib-social-icons">
-                    <li><a href="http://twitter.com/iam_kih"><i class="icon-twitter"></i></a></li>
-                    <li><a href="http://facebook.com/iamkih"><i class="icon-facebook"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/mohammad-joynul-abedin/"><i class="icon-linkedin"></i></a></li>
+                    <li><a href="https://www.facebook.com/joynul.abedin.8"><i class="icon-facebook"></i></a></li>
                 </ul>
             </p>
         </div>
