--- a/Mid-Assignment/views/register.ejs
+++ b/Mid-Assignment/views/register.ejs
@@ -71,7 +71,7 @@
 		<aside id="colorlib-hero">
 			<div class="flexslider">
 				<ul class="slides">
-			   	<li style="background-image: url(assets/images/cover-img-18.jpg);">
+			   	<li style="background-image: url(assets/images/cover-img-20.jpg);">
 			   		<div class="overlay"></div>
 			   		<div class="container-fluid">
 			   			<div class="row">
@@ -130,7 +130,7 @@
                                                     </div> -->													
                   									<div class="error">
 										            </div>		
-                  									<button type="submit" class="btn btn-primary">SUBMIT</button>
+                  									<button type="submit" class="btn btn-primary" style="font-size: x-large; color: black;">SUBMIT</button>
                   								   </form>
 												</div>
 											</div>
