--- a/Mid-Assignment/views/partials/universal-nav.ejs
+++ b/Mid-Assignment/views/partials/universal-nav.ejs
@@ -5,9 +5,9 @@
 				<div class="col-xs-2">
 					<div id="colorlib-logo"><a href="">Travel Guide</a></div>
 				</div>
-				<div class="col-xs-10 text-right menu-1" style="color: aqua;">
+				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li class="" style="color: aqua;"><a href="index">Home</a></li>
+						<li class=""><a href="index">Home</a></li>
 						<li class=""><a href="hotels">Hotels</a></li>
 						<li class=""><a href="blog">Blog</a></li>
 						<li class=""><a href="about">About</a></li>
