--- a/Mid-Assignment/views/login/userDashboard.ejs
+++ b/Mid-Assignment/views/login/userDashboard.ejs
@@ -39,7 +39,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>G</b>J</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Travel</b>Guide</span>
+      <span class="logo-lg"><b>Ghurte</b>JAI</span>
     </a>
 
     <!-- Header Navbar -->
@@ -56,6 +56,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <li class="dropdown user user-menu">
             <!-- Menu Toggle Button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <!-- The user image in the navbar-->
+              <!-- <img src="<?php echo $_SESSION['image_path']; ?>" class="user-image" alt="User Image">
+              hidden-xs hides the username on small devices so only the image appears. -->
               <span class="hidden-xs">Hi</span>
             </a>
             <ul class="dropdown-menu">
@@ -181,7 +184,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       Anything you want
     </div>
     <!-- Default to the left -->
-    <strong>Copyright &copy; 2018 <a href="#">Travel Guide</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2018 <a href="#">GhurteJai</a>.</strong> All rights reserved.
   </footer>
 
   <!-- Add the sidebar's background. This div must be placed
