--- a/Mid-Assignment/views/register.ejs
+++ b/Mid-Assignment/views/register.ejs
@@ -71,7 +71,7 @@
 		<aside id="colorlib-hero">
 			<div class="flexslider">
 				<ul class="slides">
-			   	<li style="background-image: url(assets/images/cover-img-20.jpg);">
+			   	<li style="background-image: url(assets/images/cover-img-18.jpg);">
 			   		<div class="overlay"></div>
 			   		<div class="container-fluid">
 			   			<div class="row">
@@ -130,7 +130,7 @@
                                                     </div> -->													
                   									<div class="error">
 										            </div>		
-                  									<button type="submit" class="btn btn-primary" style="font-size: x-large; color: black;">SUBMIT</button>
+                  									<button type="submit" class="btn btn-primary">SUBMIT</button>
                   								   </form>
 												</div>
 											</div>
@@ -220,6 +220,18 @@
       });
       });
     </script>
+
+   <script type="text/javascript">
+   var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+   var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+   s1.async=true;
+   s1.src='https://embed.tawk.to/5b82fb9aafc2c34e96e7eb01/default';
+   s1.charset='UTF-8';
+   s1.setAttribute('crossorigin','*');
+   s0.parentNode.insertBefore(s1,s0);
+   })();
+   </script>
    <!--End of Tawk.to Script-->
 
 	</body>
