--- a/Mid-Assignment/views/login/adminDashboard.ejs
+++ b/Mid-Assignment/views/login/adminDashboard.ejs
@@ -40,7 +40,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>G</b>J</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Travel</b>Guide</span>
+      <span class="logo-lg"><b>Ghurte</b>JAI</span>
     </a>
 
     <!-- Header Navbar -->
@@ -57,12 +57,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <li class="dropdown user user-menu">
             <!-- Menu Toggle Button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <!-- The user image in the navbar-->
+              <!-- <img src="<?php echo $_SESSION['image_path']; ?>" class="user-image" alt="User Image">
+              hidden-xs hides the username on small devices so only the image appears. -->
               <span class="hidden-xs">Hi</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
               <li class="user-header">
-                <img src="<? php echo $_SESSION['image_path']; ?>" class="img-circle" alt="User Image">
+                <img src="<?php echo $_SESSION['image_path']; ?>" class="img-circle" alt="User Image">
 
                 <p>
                   
@@ -105,6 +108,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
     <!-- Main content -->
     <section class="content container-fluid">
+
+      <!--------------------------
+        | Your Page Content Here |
+        -------------------------->
 
 
       <div class="row">
@@ -178,7 +185,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       Anything you want
     </div>
     <!-- Default to the left -->
-    <strong>Copyright &copy; 2018 <a href="#">Travel Guide</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2018 <a href="#">GhurteJai</a>.</strong> All rights reserved.
   </footer>
 
   <!-- Add the sidebar's background. This div must be placed
@@ -195,5 +202,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <script src="assets/Admin/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- AdminLTE App -->
 <script src="assets/Admin/dist/js/adminlte.min.js"></script>
+
+<!-- Optionally, you can add Slimscroll and FastClick plugins.
+     Both of these plugins are recommended to enhance the
+     user experience. -->
 </body>
 </html>
