--- a/Mid-Assignment/views/partials/footer.ejs
+++ b/Mid-Assignment/views/partials/footer.ejs
@@ -2,12 +2,12 @@
 <div class="container">
     <div class="row row-pb-md">
         <div class="col-md-3 colorlib-widget">
-            <h4>Travel Guide</h4>
+            <h4>Ghurte Jai</h4>
             <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
             <p>
                 <ul class="colorlib-social-icons">
-                    <li><a href="https://www.linkedin.com/in/mohammad-joynul-abedin/"><i class="icon-linkedin"></i></a></li>
-                    <li><a href="https://www.facebook.com/joynul.abedin.8"><i class="icon-facebook"></i></a></li>
+                    <li><a href="http://twitter.com/iam_kih"><i class="icon-twitter"></i></a></li>
+                    <li><a href="http://facebook.com/iamkih"><i class="icon-facebook"></i></a></li>
                 </ul>
             </p>
         </div>
@@ -44,10 +44,10 @@
         <div class="col-md-3 col-md-push-1">
             <h4>Contact Information</h4>
             <ul class="colorlib-footer-links">
-                <li> House#04, Road#01 <br> Sector#10, Uttara Dhaka</li>
-                <li><a href="tel://8801820570771">+8801944615494</a></li>
-                <li><a href="mailto:shokal.hasan@ieee.org">shokal.ash21016@gamil.com</a></li>
-                <li><a href="https://www.facebook.com/joynul.abedin.8">Find Me On Facebook</a></li>
+                <li>944 Silicon Malancho, <br> Flat: 5A, Road: 14, Baitul Aman Housing Society, Adabor, Dhaka</li>
+                <li><a href="tel://8801820570771">+8801820570771</a></li>
+                <li><a href="mailto:khalid.hasan@ieee.org">khalid.hasan@ieee.org</a></li>
+                <li><a href="http://facebook.com/iamkih">Find Me On Facebook</a></li>
             </ul>
         </div>
     </div>
@@ -55,7 +55,7 @@
         <div class="col-md-12 text-center">
             <p>
 
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Developed By <a href="https://www.facebook.com/joynul.abedin.8" target="_blank"> Joynul Abedin </a>| Thanks To <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Developed By <a href="https://facebook.com/iamkih" target="_blank">Khalid</a>, <a href="https://www.facebook.com/saiftheboss7" target="_blank">Saif</a> | Thanks To <a href="https://colorlib.com" target="_blank">Colorlib</a>
 
             </p>
         </div>
